--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 ASL手语_evaluate-2025-08-07_11.39.51.mp4 filter=lfs diff=lfs merge=lfs -text
 ASL手语_train-2025-08-07_00.24.41.mp4 filter=lfs diff=lfs merge=lfs -text
+ASL手语识别.mp4 filter=lfs diff=lfs merge=lfs -text
